data/derived/sp14/progs/unify/prog2525.ml.out
Characters 43-56:
  let fixpoint (f,b) = wwhile ((let g = f in (g b, b = gb)), b);;
                                             ^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'c * bool
